--- a/table.html
+++ b/table.html
@@ -4,24 +4,119 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css">
+    <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
+    <title>TABLE</title>
 </head>
 <body>
-    <div class="PSS-div-table">
-        <div class="PSS-div-table_content">
-          <table class="PSS-table">
-            <tr>
-              <th>Code</th>
-              <th>Productname</th>
-              <th>Category</th>
-              <th>Brandname</th>
-              <th>Formulation</th>
-              <th>Price</th>
-              <th>Stocks</th>
-            </tr>
-          </table>
-        </div>
-      </div>
-    </div>
+  <div class="container" style="height: 100%; width: 100%; margin-top: 2em;">
+    <table class="table table-fluid" id="myTable">
+      <thead>
+        <tr>
+          <th>Id</th>
+          <th>Name</th>
+          <th>Email</th>
+          <th>Address</th>
+          <th>Age</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>Joash Cabanilla</td>
+          <td>joash0199@gmail.com</td>
+          <td>111 R. Santiago St. 8th Ave. Caloocan City</td>
+          <td>22</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Joash Cabanilla</td>
+          <td>joash0199@gmail.com</td>
+          <td>111 R. Santiago St. 8th Ave. Caloocan City</td>
+          <td>22</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>Joash Cabanilla</td>
+          <td>joash0199@gmail.com</td>
+          <td>111 R. Santiago St. 8th Ave. Caloocan City</td>
+          <td>22</td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>Joash Cabanilla</td>
+          <td>joash0199@gmail.com</td>
+          <td>111 R. Santiago St. 8th Ave. Caloocan City</td>
+          <td>22</td>
+        </tr>
+        <tr>
+          <td>5</td>
+          <td>Joash Cabanilla</td>
+          <td>joash0199@gmail.com</td>
+          <td>111 R. Santiago St. 8th Ave. Caloocan City</td>
+          <td>22</td>
+        </tr>
+        <tr>
+          <td>6</td>
+          <td>Joash Cabanilla</td>
+          <td>joash0199@gmail.com</td>
+          <td>111 R. Santiago St. 8th Ave. Caloocan City</td>
+          <td>22</td>
+        </tr>
+        <tr>
+          <td>7</td>
+          <td>Joash Cabanilla</td>
+          <td>joash0199@gmail.com</td>
+          <td>111 R. Santiago St. 8th Ave. Caloocan City</td>
+          <td>22</td>
+        </tr>
+        <tr>
+          <td>8</td>
+          <td>Joash Cabanilla</td>
+          <td>joash0199@gmail.com</td>
+          <td>111 R. Santiago St. 8th Ave. Caloocan City</td>
+          <td>22</td>
+        </tr>
+        <tr>
+          <td>9</td>
+          <td>Joash Cabanilla</td>
+          <td>joash0199@gmail.com</td>
+          <td>111 R. Santiago St. 8th Ave. Caloocan City</td>
+          <td>22</td>
+        </tr>
+        <tr>
+          <td>10</td>
+          <td>Joash Cabanilla</td>
+          <td>joash0199@gmail.com</td>
+          <td>111 R. Santiago St. 8th Ave. Caloocan City</td>
+          <td>22</td>
+        </tr>
+        <tr>
+          <td>11</td>
+          <td>Joash Cabanilla</td>
+          <td>joash0199@gmail.com</td>
+          <td>111 R. Santiago St. 8th Ave. Caloocan City</td>
+          <td>22</td>
+        </tr>
+        <tr>
+          <td>12</td>
+          <td>Joash Cabanilla</td>
+          <td>joash0199@gmail.com</td>
+          <td>111 R. Santiago St. 8th Ave. Caloocan City</td>
+          <td>22</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+    <script>
+      $(document).ready( function () {
+        $('#myTable').DataTable();
+      });
+    </script>
 </body>
-</html>
+</html> 
